--- a/style.css
+++ b/style.css
@@ -135,6 +135,55 @@ input[type="email"].input-form {
     line-height: 48px;
 }
 
+.logo-form{
+    position: absolute;
+    width: 173.61px;
+    height: 164px;
+    left: 633px;
+    top: 91px;
+}
+#retangulo2obrigado{
+    position: absolute;
+    width: 531px;
+    height: 379px;
+    left: 456px;
+    top: 261px;
+    background: #F0E8E8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 22px;
+}
+
+#parabens{
+    position: absolute;
+    width: 418px;
+    height: 102px;
+    left: 512px;
+    top: 250px;
+    font-family:'Red Hat Display', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 49px;
+    text-align: center;
+    color: #1487C9;
+
+}
+
+#ebook{
+    position: absolute;
+    width: 480px;
+    height: 224px;
+    left: 479.93px;
+    top: 320px;
+    font-family:'Red Hat Display';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 30px;
+    text-align: center;
+    color: #000000;
+}
+
 @media only screen and (max-width: 600px) {
     .img-bg{
         width: 515px;
