--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body {
     background: url(img/FOTOS-BACKGROUND.png) no-repeat;
     background-size: 1400px 600px;
@@ -86,7 +84,7 @@ input[type="email"].input-form {
 }
 
 .gratis{
-
+    justify-content: flex-end;
     background-color: #000000;
     width: 100%;
     height: 50px;
@@ -101,55 +99,119 @@ input[type="email"].input-form {
 
 #flex {
     margin-top: 15px;
-}
+    }
 
 .conteudo {
+    
     width: 700px;
     height: 420px;
     border-radius: 77px;
     width: 560px;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 15px;
     line-height: 24px;
     font-feature-settings: 'ss01' on;
     color: #292929;;
 }
 
-.azul, .apresentacao {
+.icone {
+    width: 50%;
+}
+
+.icone img {
+    width: 70%;
+}
+
+.azul {
     background-color: #C7DFF1;
     padding: 30px;
 }
 
-.dicas {
+.amarelo {
     background-color: #FFC672;
-    padding: 30px
-
+    padding: 30px;
 }
 
 
 .live, .apresentacao, .dicas {
     display:flex;
+    justify-content: space-around;
 
 }
+
+
 .baixar {
     width: 225px;
     height: 50px;
     background-color: #FFC672;
     border-radius: 50px;
     border: none;
-
-}
-
-.baixar a{
+    display: flex;
+    color: #000000;
     font-style: normal;
     font-weight: bold;
     font-size: 18px;
-    line-height: 24px;
-    text-align: center;
-    color: #000000;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
+    position: relative;
+    top:-25px;
+    left: 70px;
 }
+
+.flexend {
+    
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    top:-5px;
+    left: -150px;
+}
+
+.mudar-cor {
+    background-color: #C7DFF1;
+}
+
+.gratis-bottom, .subtitulo {
+    text-align: center;
+    color: #292929;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 34px;
+}
+
+.subtitulo {
+    text-decoration: none;
+    width: 350px;
+    height: 50px;
+    background-color: #FFC672;
+    border-radius: 50px;
+    border: none;
+    display: flex;
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+}
+
+.cta{
+    display: flex;
+    justify-content: center;
+}
+
+footer {
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
 /* 
 
 
