--- a/css/noquadro.css
+++ b/css/noquadro.css
@@ -1,9 +1,4 @@
 /* soft reset do css */
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -27,13 +22,12 @@ time, mark, audio, video {
 }
  /*page one*/
  body {
-    background: url(img/FOTOS-BACKGROUND.png) no-repeat;
-    /*background-size: 1400px 600px;*/
-    background-size: auto 100vh;
-    font-family: 'Red Hat Text', sans-serif;
-    line-height: 1
-}
-
+        font-family: 'Red Hat Text', sans-serif;
+    }
+#box-topo{
+    background: url(../img/FOTOS-BACKGROUND.png) no-repeat;
+    background-size: cover;
+  }
 h1 {
     font-style: normal;
     font-weight: normal;
@@ -52,7 +46,7 @@ h1 {
     margin-top: 45px;
     width: 775px;
     height: 496px;
-    background: url(img/arteheader.png);
+    background: url(../img/arteheader.png);
     border-radius: 53px;
 }
 
@@ -73,7 +67,7 @@ div#logo {
     height: 164px;
     left: 590px;
     top: 200px;
-    background-image: url(img/logo.png);
+    background-image: url(../img/logo.png);
     z-index: 9999;
     background-size: 100%;
     background-repeat: no-repeat;
